# Be_Analyzer

./: .gitignore  Be_Analyzer_function.py  Be_Analyzer_test.py  README.md  emboss_after.txt  emboss_before.txt  emboss_wt.txt  test.psdueocode
coffee/: miseq-analyzer.coffee
cpp/: .be_analyzer.cpp.swn  .be_analyzer.cpp.swo  .be_analyzer.cpp.swp  1  CMakeLists.txt  be-analyzer-core.js  be_analyzer.cpp  be_analyzer.h  be_fastq-join.h  be_fastq-lib.cpp  be_fastq_join.cpp  build.sh  emscripten_interface.cpp  emscripten_progress.h  main.cpp  main_v2.cpp
emsdk-portable/: emscripten-nightlies.txt  emscripten-tags.txt  emsdk_set_env.sh  llvm-nightlies-64bit.txt  llvm-tags-64bit.txt
emsdk-portable/clang/e1.37.16_64bit/: clang-format  clang-offload-bundler  diagtool  llvm-config  llvm-lit
kraken/: Be_Analyzer_function_pandas.py  Be_Analyzer_pandas_test.py  Be_Analyzer_test.py  Chart.xlsx  Count.txt  EMBOSS_result.txt  Substitution_control_compare.xlsx  Substitution_transition.xlsx  Total_Substitutions.xlsx  dict.txt  emboss_after.txt  emboss_before.txt  test.fastqjoin  test_C_to_D_Substitutions.xlsx  test_Chart.xlsx  test_Count.txt  test_EMBOSS_result.txt  test_Substitution_control_compare.xlsx  test_Substitution_transition.xlsx  test_Total_Substitutions.xlsx  test_dict.txt  test_emboss_after.txt  test_emboss_before.txt  test_wt_seq_emboss.txt  testc.fastqjoin  wt_seq_emboss.txt
testresult/: test_Chart.xlsx  test_EMBOSS_result.txt  test_Substitution_control_compare.xlsx  test_dict.txt  test_emboss_after.txt
